--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,13 +5,14 @@ on:
     types: [ closed ]
 
 jobs:
-  clean-artefacts:
+  test:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     env:
       PR_NUMBER: ${{ github.event.number }}
     steps:
     - name: Delete PR Docker images
-      uses: snok/container-retention-policy@v2
-      with:
-        account-type: org
+      run: |
+          echo '::echo::on'
+          echo "trigger pr 1: "${{ github.event.number }}
+          echo "trigger pr 2: "${{ PR_NUMBER }}
