--- a/.github/workflows/release2.yml
+++ b/.github/workflows/release2.yml
@@ -4,7 +4,7 @@ run-name: Release of ${{ github.ref_name }}
 on:
   push:
     tags:
-      - 'admin-ui-[1-9]+.[0-9]+.[0-9]+.*'
+      - 'admin-ui-[1-9]+.[0-9]+.[0-9]+.**'
       - 'kc-themes-[1-9]+.[0-9]+.[0-9]+.*'
 
 jobs:
