--- a/.github/workflows/release2.yml
+++ b/.github/workflows/release2.yml
@@ -1,10 +1,11 @@
-name: Release
+name: testtest
 run-name: Release of ${{ github.ref_name }}
 
 on:
   push:
     tags:
-      - 'admin-ui-[1-9]+.[0-9]+.[0-9]+.**'
+    admin-ui-1.0.0-rc.1
+      - 'admin-ui-[1-9]+.[0-9]+.[0-9]+*'
       - 'kc-themes-[1-9]+.[0-9]+.[0-9]+.*'
 
 jobs:
